--- a/package.json
+++ b/package.json
@@ -13,13 +13,12 @@
     "eslint-plugin-prettier": "^3.1.1",
     "graphql": "^14.5.8",
     "graphql-tag": "^2.10.1",
-    "history": "^4.10.1",
     "idx.macro": "^4.0.0",
     "prettier": "^1.18.2",
     "prop-types": "^15.7.2",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
-    "react-router-dom": "^5.1.2",
+    "react-icons": "^3.8.0",
     "react-scripts": "3.1.1"
   },
   "scripts": {
