--- a/package.json
+++ b/package.json
@@ -7,6 +7,10 @@
     "@material-ui/core": "^4.5.1",
     "@material-ui/icons": "^4.5.1",
     "@material-ui/styles": "^4.5.0",
+    "@types/jest": "^24.0.20",
+    "@types/node": "^12.11.7",
+    "@types/react": "^16.9.11",
+    "@types/react-dom": "^16.9.3",
     "apollo-boost": "^0.4.4",
     "apollo-cache-inmemory": "^1.6.3",
     "enzyme": "^3.10.0",
@@ -24,7 +28,8 @@
     "react-icons": "^3.8.0",
     "react-scripts": "3.1.1",
     "react-test-renderer": "^16.11.0",
-    "sanitize-html": "^1.20.1"
+    "sanitize-html": "^1.20.1",
+    "typescript": "^3.6.4"
   },
   "scripts": {
     "start": "react-scripts start",
